[package]
name = "lis2dw12"
version = "0.1.5"
authors = ["David Haig <david@ninjametal.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ninjasource/lis2dw12"
documentation = "https://docs.rs/lis2dw12"
description = "A no_std compatible Rust driver for the low power ST 3-Axis MEMS 14-bit accelerometer LIS2DW12 using the SPI bus in async or blocking mode"
readme = "README.md"
keywords = ["accelerometer", "sensor", "spi", "driver", "no_std"]
categories = ["embedded", "no-std"]
edition = "2018"

[features]
default = ["non_blocking"]
non_blocking = ["embassy-traits"] # enables async, requires Nightly. Experimental.
out_f32 = ["num-traits", "num-derive"] # enables normalised floating point output

[dependencies]
embedded-hal = "0.2.5"
accelerometer = "0.12.0"
num-traits = { version = "0.2.14", optional = true, default-features = false }
num-derive = { version = "0.3.3", optional = true, default-features = false }
# embassy-traits = { version = "0.0.2", optional = true, features = ["defmt"]}
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", optional = true, features = ["defmt"]}
nb = { version = "1.0" }

# [patch.crates-io]
# embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }

[profile.release]
lto = true

