[package]
name = "lis2dw12"
version = "0.2.0"
authors = ["David Haig <david@ninjametal.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ninjasource/lis2dw12"
documentation = "https://docs.rs/lis2dw12"
description = "A no_std compatible Rust driver for the low power ST 3-Axis MEMS 14-bit accelerometer LIS2DW12 using the SPI bus in async or blocking mode"
readme = "README.md"
keywords = ["accelerometer", "sensor", "spi", "driver", "no_std"]
categories = ["embedded", "no-std"]
edition = "2021"

[features]
default = ["non_blocking", "out_f32"]
non_blocking = ["dep:embedded-hal-async"]
out_f32 = [
    "dep:num-traits",
    "dep:num-derive",
] # enables normalised floating point output

[dependencies]
embedded-hal = "0.2.5"
accelerometer = "0.12.0"
num-traits = { version = "0.2.19", optional = true, default-features = false }
num-derive = { version = "0.4.2", optional = true, default-features = false }
embedded-hal-async = { version = "1.0.0", optional = true }
nb = "1.1.0"

[profile.release]
lto = true
